# libltc

./: .gitignore  CMakeLists.txt
src/: ltc.h  timecode.c
